2005-01-23  Davyd Madeley  <davyd@madeley.id.au>

	* battstat/GNOME_BattstatApplet.server.in.in:
	* battstat/Makefile.am:
	* battstat/battstat_applet.c:
	* battstat/battstat.png (removed): Switch to using gnome-dev-battery

	* drivemount/GNOME_DriveMountApplet.server.in.in:
	* drivemount/Makefile.am:
	* drivemount/drivemount.c:
	* drivemount/drivemount-applet.png (removed): Switch to
	  gnome-dev-jazdrive.
	
	* mixer/GNOME_MixerApplet.server.in.in:
	* mixer/Makefile.am:
	* mixer/applet.c:
	* mixer/gnome-mixer-applet.png (removed): Switch to volume-knob.

2005-01-13  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: New configure option : --enable-more-warnings
	(GCC only). Use it !

2005-01-11  Davyd Madeley  <davyd@madeley.id.au>

	* NEWS:
	* configure.in: Release 2.9.4.1

2005-01-11  Davyd Madeley  <davyd@madeley.id.au>

	* NEWS:
	* configure.in: Release 2.9.4

	* Makefile.am: Ensure M4 macros are in included in tarball

2005-01-11  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in: Use ACLOCAL_AMFLAGS correctly.

	* charpick/charpick.c:
	* minicommander/src/about.c:
	* mixer/applet.c: Use GtkAboutDialog

2005-01-11  Davyd Madeley  <davyd@madeley.id.au>

	* accessx-status/applet.c:
	* battstat/battstat_applet.c:
	* charpick/charpick.c:
	* drivemount/drivemount.c:
	* geyes/geyes.c:
	* gswitchit/gswitchit-applet.c:
	* gtik/gtik.c:
	* gweather/gweather-applet.c:
	* mini-commander/src/mini-commander_applet.c:
	* mixer/applet.c:
	* modemlights/modem-applet.c:
	* multiload/main.c:
	* trashapplet/src/trashapplet.c: specify DATADIR in
	panel_applet_setup_menu_from_file(), this will load the correct
	version of the menus XML when building in a different prefix.

	* modemlights/modem-applet.c:
	* trashapplet/src/trashapplet.c: Don't set parent for GtkAboutDialog,
	as we want about dialog to appear in the middle of the screen.

	* gweather/Makefile.am:
	* gweather/gweather-xml.c: Move Gweather files to