@@ -1,3 +1,0 @@
-- finish root authentication
-- remove TODOs in the code
-- turn it all asynchronous
