@@ -1,3 +1,10 @@
+2005-01-24  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* modem-applet.c, modemlights.glade: fixed all the known issues left, 
+	turn it all asynchronous without breaking badly, fixed some leaks, 
+	detect su at configure time, free things properly and mark the OK 
+	button as default when putting password.
+
 2005-01-11  Davyd Madeley  <davyd@madeley.id.au>
 
 	* Makefile.am: No need to define VERSION or ICONDIR as they are
