@@ -1,3 +1,7 @@
+2005-01-24  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* configure.in: added su checks for the modemlights applet
+
 2005-01-23  Davyd Madeley  <davyd@madeley.id.au>
 
 	* battstat/GNOME_BattstatApplet.server.in.in:
